# SayoKeys

./: .gitignore  README.md  pyproject.toml  requirements.txt
appimage/: AppRun  build_appimage.sh  sayogui.desktop
sayoctl/: cli.py  gui.py  protocol.py
